--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,81 @@
-body {
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+
+}
+body {
+  background-image: url("./starwars.jpg");
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+.apps {
+  max-width: 1024px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap:40px;
+}
+header{
+    text-align: center;
+    color: white;
+}
+.starships {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 20px;
+  margin-bottom: 30px;
+}
+.starship {
+  padding: 16px;
+  border: 1px solid gray;
+  border-radius: 6px;
+  background: transparent;
+  background: rgba(82, 76, 76, 0.774);
+  color: white;
+  font-size: 12px;
+  opacity: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.description {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+.name {
+  text-align: center;
+  border-bottom: 5px solid black
+}
+.model {
+  margin-top: 5px;
+}
+.info{
+  border-bottom: 2px solid rgb(102, 97, 97);
+}
+.films {
+  margin-top: 5px;
+}
+@media only screen and (max-width: 600px)  {
+  .starships {
+    margin: 0 auto;
+    grid-template-columns: 1fr;
+  }
+}
+@media only screen and (min-width: 600px)  {
+  .starships {
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .starships {
+    margin: 0 auto;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
 }
